# DumplingBot

./: .gitmodules  CMakeLists.txt  README.md  index.html  webui.js
apriltags/: CMakeLists.txt  package.xml
apriltags/include/: apriltags.h
apriltags/launch/: usb_cam_apriltags.launch  usb_cam_apriltags_sbpl.launch
apriltags/src/: .apriltags.cpp.swp  apriltags.cpp  control_arm.cpp  localization.cpp  visualization.cpp
dumplingUI/: delivery.html  index.html  loading.html
dumplingUI/css/: sb-admin-2.css
dumplingUI/js/: dashboard.js  dashboard_old.js  delivery.js  loading.js  rosbridge.js  trayControl.js  webui.js
dumpling_2dnav/: CMakeLists.txt  package.xml
dumpling_2dnav/launch/: dumpling_nav.launch
dumpling_2dnav/params/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
dumpling_gazebo/: CMakeLists.txt  package.xml
dumpling_gazebo/launch/: dumpling.launch  turtlebot3_world.launch
dumpling_gazebo/worlds/: dumpling (copy).world  dumpling.world  dumpling_wall.world
executive_smach/smach_ros/: CMakeLists.txt  package.xml
executive_smach/smach_ros/msg/: robot_state.msg
executive_smach/smach_ros/srv/: full_path.srv
executive_smach/smach_ros/test/: Full_path_server.py  reach_client.py  sequence.py  test.py
localization/: CMakeLists.txt  package.xml
localization/launch/: localization-test.launch  localize-fixed-camera.launch  localize-fixed-tags.launch
localization/msg/: EncoderCounts.msg  tag_pose_optical.msg
localization/src/: .localization.cpp.swp  .localize_visual.cpp.swp  (+7 more)
mecanum_sim/: CMakeLists.txt
mecanum_sim/launch/: mecanum.launch  robot.launch  robot_1cam.launch  robot_slam.launch
mecanum_sim/src/: mecanum_control.cpp  mecanum_controller.cc  tf_broadcaster.cpp
mecanum_sim/urdf/: mecanum.gazebo  mecanum.xacro
navigation/: CMakeLists.txt  package.xml
planning/: CMakeLists.txt  package.xml
robot_pose_ekf/: robot_pose_ekf.launch
(+76 files in other folders)
